# xtream-ai-assignment-engineer

./: .env  .gitignore  README.md  pyproject.toml
src/: __init__.py
src/challenge1/: main.ipynb
src/challenge2/: builder.py  core.py
src/challenge3/: __init__.py  database.py
src/challenge4/: gcp.drawio
tests/: test_challenge3.py
